final-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksh-app
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ksh-app
spec:
  replicas: 2
  selector:
    matchLabels: {app: web}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels: {app: web}
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: web
          image: 043902793737.dkr.ecr.ap-northeast-2.amazonaws.com/ksh-web-app:latest
          ports:
            - containerPort: 80
          resources:
            requests: {cpu: "100m", memory: "128Mi"}
            limits: {cpu: "500m", memory: "512Mi"}
          readinessProbe:
            httpGet: {path: "/", port: 80}
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: "/", port: 80}
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ksh-app
spec:
  selector: {app: web}
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
  namespace: ksh-app
spec:
  replicas: 2
  selector:
    matchLabels: {app: was}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels: {app: was}
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: was
          image: 043902793737.dkr.ecr.ap-northeast-2.amazonaws.com/ksh-was/flask-app:b2277095cca23f475d645c8b8e8ebf1ec609da9e
          ports:
            - containerPort: 8000
          resources:
            requests: {cpu: "100m", memory: "128Mi"}
            limits: {cpu: "500m", memory: "512Mi"}
          command: ["/bin/sh", "-lc"]
          # Gunicorn 타깃은 app:app
          args: ["exec gunicorn -w 2 -k gthread -b 0.0.0.0:8000 app:app"]
          # === Redis 세션: 'my-redis-master' 서비스 FQDN으로 직접 연결 ===
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket: {port: 8000}
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: ksh-app
spec:
  selector: {app: was}
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
