ing-was.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress
  namespace: ksh-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ksh-app
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/ping
    alb.ingress.io/success-codes: "200-499"
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: was-svc
                port:
                  number: 8000
